UMN/CS5161 - Compilers/a2/test/test2c.result
Error found on line 55
 Incorrect number of parameters to function sum_fn
Error found on line 58
 Incorrect number of parameters to function max_fn


